2-addons/manifests/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: dex-https
      protocol: HTTPS
      port: 443
      hostname: ${SHOULDERS_DEX_HOST}
      tls:
        certificateRefs:
          - kind: Secret
            name: dex-tls
      allowedRoutes:
        namespaces:
          from: All
