2-addons/manifests/gateway/alertmanager-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: observability
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - ${SHOULDERS_ALERTMANAGER_HOST}
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
