2-addons/manifests/gateway/dex-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
  namespace: dex
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - ${SHOULDERS_DEX_HOST}
  rules:
    - backendRefs:
        - name: dex
          port: 5556
