2-addons/manifests/gateway/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - ${SHOULDERS_GRAFANA_HOST}
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
