2-addons/manifests/gateway/headlamp-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - headlamp.localhost
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
