2-addons/manifests/gateway/reporter-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: policy-reporter
  namespace: policy-reporter
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - ${SHOULDERS_REPORTER_HOST}
  rules:
    - backendRefs:
        - name: policy-reporter-ui
          port: 8080
